# python-tool-competition-2024-crosshair

./: .gitmodules  README.md  pyproject.toml
python_tool_competition_2024_crosshair/: codegen_substitute.py  cover_substitute.py  generator.py  path_cover_substitute.py  solver_substitute.py
