[tool.poetry]
name = "python-tool-competition-2024-crosshair"
version = "0.1.0"
description = "Python Tool Competition 2024 implementation using CrossHair"
authors = ["Phillip Schanely <pschanely@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
python-tool-competition-2024 = [
    { url = "https://github.com/tochilinak/python-tool-competition-2024/releases/download/v0/python_tool_competition_2024-0.2.0-py3-none-any.whl" }
]
crosshair-tool = "^0.0.45"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."python_tool_competition_2024.test_generators"]
crosshair = "python_tool_competition_2024_crosshair.generator:CrosshairTestGenerator"
